fixed background bleeding through

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-html{
-  background-color: lightblue;
-  
-}
 .App {
   text-align: center;
 }
@@ -33,6 +29,7 @@ html{
 }
 body{
   font-family: 'Spectral SC', serif;
+  background-color: lightblue;
 }
 h1 {
   font-family: 'Spectral SC', serif;
@@ -61,7 +58,7 @@ h1 {
 }
  .container{
   background-image: url('./images/wood.jpg');
-  width:500px;
+  width:504px;
   margin:0 auto;
   
 }
@@ -108,6 +105,7 @@ button {
 }
 .empty {
   background-color: lightblue;
+  margin:-0.6px;
   display:flex;
 }
 .top {
